<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="InconsistentArrays,MissingTranslation">
    <string name="app_name">QR &amp; Barcode Scanner</string>
    <string name="shortcut_scan_from_camera">Scan</string>
    <string name="shortcut_scan_from_file">Scan image</string>
    <string name="shortcut_create_barcode">Create barcode</string>
    <string name="shortcut_history">History</string>
    <string name="intent_filter_create_qr_code_text">Create QR code</string>
    <string name="intent_filter_scan_image">Scan image</string>
    <string name="error_dialog_title">Error</string>
    <string name="error_dialog_default_message">Something went wrong</string>
    <string name="error_dialog_positive_button_text">OK</string>
    <string name="dialog_delete_positive_button">Delete</string>
    <string name="dialog_delete_negative_button">Cancel</string>
    <string name="dialog_delete_clear_history_message">Delete history?</string>
    <string name="dialog_delete_barcode_message">Delete?</string>
    <string name="dialog_confirm_barcode_title">Confirm</string>
    <string name="dialog_confirm_barcode_positive_button">OK</string>
    <string name="dialog_confirm_barcode_negative_button">Cancel</string>
    <string name="dialog_edit_barcode_name_title">Edit name</string>
    <string name="dialog_edit_barcode_name_positive_button">OK</string>
    <string name="dialog_edit_barcode_name_negative_button">Cancel</string>
    <string name="activity_bottom_tabs_scan_tab">Scan</string>
    <string name="activity_bottom_tabs_create_tab">Create</string>
    <string name="activity_bottom_tabs_history_tab">History</string>
    <string name="activity_bottom_tabs_settings_tab">Settings</string>
    <string name="fragment_scan_barcode_from_camera_scan_from_file">Scan image</string>
    <string name="fragment_scan_barcode_from_camera_flash">Flash</string>
    <string name="fragment_scan_barcode_from_camera_barcode_saved">Saved</string>
    <string name="activity_scan_barcode_from_file_title">Scan</string>
    <string name="activity_scan_barcode_from_file_scan">OK</string>
    <string name="activity_scan_barcode_from_file_rotate_left">Rotate left</string>
    <string name="activity_scan_barcode_from_file_rotate_right">Rotate right</string>
    <string name="activity_scan_barcode_from_file_change_image">Choose another image</string>
    <string name="fragment_create_barcode_title">Create</string>
    <string name="fragment_create_barcode_qr_code">QR code</string>
    <string name="fragment_create_barcode_qr_code_clipboard">Content from clipboard</string>
    <string name="fragment_create_barcode_qr_code_text">Text</string>
    <string name="fragment_create_barcode_qr_code_show_all">More QR codes</string>
    <string name="fragment_create_barcode">Barcode</string>
    <string name="fragment_create_barcode_show_all">Barcodes and other 2D codes</string>
    <string name="fragment_create_qr_code_list_title">Create QR code</string>
    <string name="fragment_create_barcode_list_title">Create barcode</string>
    <string name="fragment_create_barcode_list_2d">2D barcodes</string>
    <string name="fragment_create_barcode_list_1d">1D barcodes</string>
    <string name="activity_create_barcode_menu_item_title">Create</string>
    <string name="activity_create_barcode_contacts_menu_item_title">Contacts</string>
    <string name="fragment_create_barcode_alternative">Alternatively:</string>
    <string name="fragment_create_qr_code_url_alternative">- Open your browser app\n- Load a website\n- Click \"Share\" from the menu\n- Select this app</string>
    <string name="fragment_create_qr_code_bookmark_title_hint">Title</string>
    <string name="fragment_create_qr_code_wifi_encryption_hint">Encryption</string>
    <string-array name="fragment_create_qr_code_wifi_encryption_types">
        <item>WPA/WPA2</item>
        <item>WEP</item>
        <item>None</item>
    </string-array>
    <string name="fragment_create_qr_code_wifi_network_name_hint">Network name</string>
    <string name="fragment_create_qr_code_wifi_password_hint">Password</string>
    <string name="fragment_create_qr_code_wifi_is_hidden_hint">Hidden</string>
    <string name="fragment_create_qr_code_email_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_email_message_hint">Message</string>
    <string name="fragment_create_qr_code_sms_message_hint">Message</string>
    <string name="fragment_create_qr_code_mms_subject_hint">Subject</string>
    <string name="fragment_create_qr_code_mms_message_hint">Message</string>
    <string name="fragment_create_qr_code_cryptocurrency_type_hint">Cryptocurrency</string>
    <string-array name="fragment_create_qr_code_cryptocurrencies">
        <item>Bitcoin</item>
        <item>Bitcoin Cash</item>
        <item>Ethereum</item>
        <item>Litecoin</item>
        <item>Dash</item>
    </string-array>
    <string name="fragment_create_qr_code_cryptocurrency_address_hint">Receiver address</string>
    <string name="fragment_create_qr_code_cryptocurrency_amount_hint">Amount</string>
    <string name="fragment_create_qr_code_cryptocurrency_label_hint">Label</string>
    <string name="fragment_create_qr_code_cryptocurrency_message_hint">Message</string>
    <string name="fragment_create_qr_code_location_latitude_hint">Latitude</string>
    <string name="fragment_create_qr_code_location_longitude_hint">Longitude</string>
    <string name="fragment_create_qr_code_location_altitude_hint">Altitude (optional)</string>
    <string name="fragment_create_qr_code_otp_type_hint">Type</string>
    <string-array name="fragment_create_qr_code_otp_types">
        <item>HOTP</item>
        <item>TOTP</item>
    </string-array>
    <string name="fragment_create_qr_code_otp_algorithm_hint">Algorithm</string>
    <string-array name="fragment_create_qr_code_otp_algorithms">
        <item tools:ignore="Typos">SHA1</item>
        <item>SHA256</item>
        <item>SHA512</item>
    </string-array>
    <string name="fragment_create_qr_code_otp_issuer_hint">Issuer</string>
    <string name="fragment_create_qr_code_otp_account_hint">Account</string>
    <string name="fragment_create_qr_code_otp_digits_hint">Digits</string>
    <string name="fragment_create_qr_code_otp_period_hint">Period</string>
    <string name="fragment_create_qr_code_otp_counter_hint">Counter</string>
    <string name="fragment_create_qr_code_otp_secret_hint">Secret</string>
    <string name="fragment_create_qr_code_otp_generate_random_secret">Random Secret</string>
    <string name="fragment_create_qr_code_event_title_hint">Title</string>
    <string name="fragment_create_qr_code_event_organizer_hint">Organizer</string>
    <string name="fragment_create_qr_code_event_summary_hint">Summary</string>
    <string name="fragment_settings_title">Settings</string>
    <string name="fragment_settings_appearance_settings">Appearance</string>
    <string name="fragment_settings_theme">Theme</string>
    <string name="fragment_settings_inverse_barcode_colors_in_dark_theme">Inverse code colors in dark theme</string>
    <string name="fragment_settings_inverse_barcode_colors_in_dark_theme_hint">Show codes with white content on dark background</string>
    <string name="fragment_settings_scanner_settings">Scanner</string>
    <string name="fragment_settings_open_content_automatically">Open content of scanned codes automatically</string>
    <string name="fragment_settings_open_content_automatically_hint">May open harmful content</string>
    <string name="fragment_settings_copy_to_clipboard">Copy to clipboard</string>
    <string name="fragment_settings_copy_to_clipboard_hint">Copy scanned barcodes to clipboard</string>
    <string name="fragment_settings_simple_auto_focus">Simple auto focus mode</string>
    <string name="fragment_settings_simple_auto_focus_hint">Enable only if you have problems focusing</string>
    <string name="fragment_settings_flash">Flash</string>
    <string name="fragment_settings_flash_hint">Enable flash on start</string>
    <string name="fragment_settings_vibrate">Vibrate</string>
    <string name="fragment_settings_vibrate_hint">Vibrate on scan</string>
    <string name="fragment_settings_continuous_scanning">Continuous scanning</string>
    <string name="fragment_settings_continuous_scanning_hint">Save scans to history only</string>
    <string name="fragment_settings_confirm_scans_manually">Confirm scans manually</string>
    <string name="fragment_settings_confirm_scans_manually_hint">Avoid accidental scans</string>
    <string name="fragment_settings_camera">Camera</string>
    <string name="fragment_settings_supported_formats">Supported formats</string>
    <string name="fragment_settings_history_settings">History</string>
    <string name="fragment_settings_save_scanned_barcodes_to_history">Save scanned barcodes to history</string>
    <string name="fragment_settings_save_created_barcodes_to_history">Save created barcodes to history</string>
    <string name="fragment_settings_do_not_save_duplicates">Do not save duplicates</string>
    <string name="fragment_settings_do_not_save_duplicates_hint">Avoid duplicates in history</string>
    <string name="fragment_settings_clear_history">Clear history</string>
    <string name="fragment_settings_advanced_settings">Advanced</string>
    <string name="fragment_settings_choose_search_engines">Search Engines</string>
    <string name="fragment_settings_choose_search_engines_hint">Choose a search engine for web searches</string>
    <string name="fragment_settings_error_reports">Error reports</string>
    <string name="fragment_settings_enable_error_reports">Enable error reports</string>
    <string name="fragment_settings_enable_error_reports_hint">Help us to fix bugs</string>
    <string name="fragment_settings_about">About</string>
    <string name="fragment_settings_check_updates">Check for updates</string>
    <string name="fragment_settings_permissions">Permissions</string>
    <string name="fragment_settings_source_code">Source code</string>
    <string name="fragment_settings_app_version">App version</string>
    <string name="activity_all_permissions_title">Permissions</string>
    <string name="activity_all_permissions_normal_permissions">Normal</string>
    <string name="activity_all_permissions_vibrate_title">Vibrate</string>
    <string name="activity_all_permissions_vibrate_hint">Used to vibrate on scan</string>
    <string name="activity_all_permissions_wifi_title">Wi-Fi</string>
    <string name="activity_all_permissions_wifi_hint">Used to connect to Wi-Fi by scanning a QR code</string>
    <string name="activity_all_permissions_internet_title">Internet</string>
    <string name="activity_all_permissions_internet_hint">Used to send error reports. This can be disabled in settings.</string>
    <string name="activity_all_permissions_runtime_permissions">Runtime</string>
    <string name="activity_all_permissions_camera_title">Camera</string>
    <string name="activity_all_permissions_camera_hint">Used to scan QR codes and barcodes from camera</string>
    <string name="activity_all_permissions_read_contacts_title">Read contacts</string>
    <string name="activity_all_permissions_read_contacts_hint">Used to create a QR code by selecting a contact from your contact list</string>
    <string name="activity_all_permissions_storage_title">Storage</string>
    <string name="activity_all_permissions_storage_hint">Used to access storage when you want to save your QR code or barcode as text or image</string>
    <string name="activity_barcode_add_to_favorites">Add to favorites</string>
    <string name="activity_barcode_show_barcode_image">View code</string>
    <string name="activity_barcode_delete">Delete</string>
    <string name="activity_barcode_image_increase_brightness">Increase brightness</string>
    <string name="activity_barcode_image_decrease_brightness">Decrease brightness</string>
</resources>