<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/appBarLayout"
        style="@style/AppBarLayoutStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarStyle"
            app:title="@string/fragment_settings_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollStyle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Appearance-->
            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/textViewAppearanceTitle"
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/fragment_settings_appearance_settings" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonChooseTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_theme" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonInverseBarcodeColorsInDarkTheme"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_inverse_barcode_colors_in_dark_theme_hint"
                app:text="@string/fragment_settings_inverse_barcode_colors_in_dark_theme" />

            <View
                android:id="@+id/delimiterAppearance"
                style="@style/DelimiterStyle" />

            <!--Scanner-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_very_big"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/fragment_settings_scanner_settings" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonOpenLinksAutomatically"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_open_content_automatically_hint"
                app:text="@string/fragment_settings_open_content_automatically" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonCopyToClipboard"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_copy_to_clipboard_hint"
                app:text="@string/fragment_settings_copy_to_clipboard" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonSimpleAutoFocus"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_simple_auto_focus_hint"
                app:text="@string/fragment_settings_simple_auto_focus" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonFlashlight"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_flash_hint"
                app:text="@string/fragment_settings_flash" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonVibrate"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_vibrate_hint"
                app:text="@string/fragment_settings_vibrate" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonContinuousScanning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_continuous_scanning_hint"
                app:text="@string/fragment_settings_continuous_scanning" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonConfirmScansManually"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_confirm_scans_manually_hint"
                app:text="@string/fragment_settings_confirm_scans_manually" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonChooseCamera"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_camera" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonSelectSupportedFormats"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_supported_formats" />

            <View style="@style/DelimiterStyle" />

            <!--History-->
            <TextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_very_big"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/fragment_settings_history_settings" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonSaveScannedBarcodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/fragment_settings_save_scanned_barcodes_to_history" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonSaveCreatedBarcodes"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:text="@string/fragment_settings_save_created_barcodes_to_history" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonDoNotSaveDuplicates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_do_not_save_duplicates_hint"
                app:text="@string/fragment_settings_do_not_save_duplicates" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonClearHistory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isDelimiterVisible="false"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_clear_history" />

            <View style="@style/DelimiterStyle" />

            <!--Advanced-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_very_big"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/fragment_settings_advanced_settings" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonChooseSearchEngine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_choose_search_engines_hint"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_choose_search_engines" />

            <View style="@style/DelimiterStyle" />

            <!--Error reports-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_very_big"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/fragment_settings_error_reports" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonEnableErrorReports"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/fragment_settings_enable_error_reports_hint"
                app:text="@string/fragment_settings_enable_error_reports" />

            <View style="@style/DelimiterStyle" />

            <!--About-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin_very_big"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/fragment_settings_about" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonCheckUpdates"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_check_updates" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonPermissions"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_permissions" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonSourceCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_source_code" />

            <com.mckimquyen.barcodescanner.feature.common.view.SettingsButton
                android:id="@+id/buttonAppVersion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:isDelimiterVisible="false"
                app:isSwitchVisible="false"
                app:text="@string/fragment_settings_app_version" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
