<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/rootView"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.appbar.AppBarLayout style="@style/AppBarLayoutStyle">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            style="@style/ToolbarWithBackButtonStyle"
            app:title="@string/activity_all_permissions_title" />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.core.widget.NestedScrollView
        android:id="@+id/scrollView"
        style="@style/ScrollStyle">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <!--Normal permissions-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/activity_all_permissions_normal_permissions" />

            <com.mckimquyen.barcodescanner.feature.common.view.ButtonSettings
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/activity_all_permissions_vibrate_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                app:text="@string/activity_all_permissions_vibrate_title" />

            <com.mckimquyen.barcodescanner.feature.common.view.ButtonSettings
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/activity_all_permissions_wifi_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                app:text="@string/activity_all_permissions_wifi_title" />

            <com.mckimquyen.barcodescanner.feature.common.view.ButtonSettings
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/activity_all_permissions_internet_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                app:text="@string/activity_all_permissions_internet_title" />

            <!--Dangerous permissions-->
            <androidx.appcompat.widget.AppCompatTextView
                style="@style/SettingsGroupTitleTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:layout_marginBottom="@dimen/margin_small"
                android:text="@string/activity_all_permissions_runtime_permissions" />

            <com.mckimquyen.barcodescanner.feature.common.view.ButtonSettings
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/activity_all_permissions_camera_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                app:text="@string/activity_all_permissions_camera_title" />

            <com.mckimquyen.barcodescanner.feature.common.view.ButtonSettings
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/activity_all_permissions_read_contacts_hint"
                app:isDelimiterVisible="true"
                app:isSwitchVisible="false"
                app:text="@string/activity_all_permissions_read_contacts_title" />

            <com.mckimquyen.barcodescanner.feature.common.view.ButtonSettings
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hint="@string/activity_all_permissions_storage_hint"
                app:isDelimiterVisible="false"
                app:isSwitchVisible="false"
                app:text="@string/activity_all_permissions_storage_title" />

        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.core.widget.NestedScrollView>

</androidx.coordinatorlayout.widget.CoordinatorLayout>
