<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="AlwaysShowAction">
    <item
        android:id="@+id/itemScan"
        android:icon="@drawable/ic_scan"
        android:title="@string/activity_bottom_tabs_scan_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemCreate"
        android:icon="@drawable/ic_create"
        android:title="@string/activity_bottom_tabs_create_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemHistory"
        android:icon="@drawable/ic_history"
        android:title="@string/activity_bottom_tabs_history_tab"
        app:showAsAction="always" />
    <item
        android:id="@+id/itemSettings"
        android:icon="@drawable/ic_settings"
        android:title="@string/activity_bottom_tabs_settings_tab"
        app:showAsAction="always" />
</menu>
