<shortcuts xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UnusedAttribute">

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan_from_camera"
        android:shortcutId="scanFromCamera"
        android:shortcutLongLabel="@string/shortcut_scan_from_camera"
        android:shortcutShortLabel="@string/shortcut_scan_from_camera">
        <intent
            android:action="com.mckimquyen.barcodescanner.SCAN_FROM_CAMERA"
            android:targetClass="com.mckimquyen.barcodescanner.feature.tabs.BottomTabsActivity"
            android:targetPackage="com.mckimquyen.barcodescanner" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_scan_from_file"
        android:shortcutId="scanFromFile"
        android:shortcutLongLabel="@string/shortcut_scan_from_file"
        android:shortcutShortLabel="@string/shortcut_scan_from_file">
        <intent
            android:action="com.mckimquyen.barcodescanner.SCAN_FROM_FILE"
            android:targetClass="com.mckimquyen.barcodescanner.feature.tabs.scan.file.ScanBarcodeFromFileActivity"
            android:targetPackage="com.mckimquyen.barcodescanner" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_create_barcode"
        android:shortcutId="createBarcode"
        android:shortcutLongLabel="@string/shortcut_create_barcode"
        android:shortcutShortLabel="@string/shortcut_create_barcode">
        <intent
            android:action="com.mckimquyen.barcodescanner.CREATE_BARCODE"
            android:targetClass="com.mckimquyen.barcodescanner.feature.tabs.BottomTabsActivity"
            android:targetPackage="com.mckimquyen.barcodescanner" />
    </shortcut>

    <shortcut
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_history"
        android:shortcutId="history"
        android:shortcutLongLabel="@string/shortcut_history"
        android:shortcutShortLabel="@string/shortcut_history">
        <intent
            android:action="com.mckimquyen.barcodescanner.HISTORY"
            android:targetClass="com.mckimquyen.barcodescanner.feature.tabs.BottomTabsActivity"
            android:targetPackage="com.mckimquyen.barcodescanner" />
    </shortcut>

</shortcuts>